메이븐 빌드 시 spring profile설정 문제는 어떻게 하지?

--- a/bluesky-boot-docs/src/main/asciidoc/brick/index.adoc
+++ b/bluesky-boot-docs/src/main/asciidoc/brick/index.adoc
@@ -10,6 +10,8 @@ This is a user manual for an example project.
 == 소개
 이것은 테스트
 
+include::{snippets}/error-example/curl-request.adoc[]
+
 
 백엔드 개발자 가이드
 프론트 개발자 가이드123
