spring boto 2.1.5.RELEASE
spring rest doc 설정 추가

--- a/bluesky-boot-docs/src/main/asciidoc/brick/index.adoc
+++ b/bluesky-boot-docs/src/main/asciidoc/brick/index.adoc
@@ -11,7 +11,9 @@ This is a user manual for an example project.
 이것은 테스트
 
 include::{snippets}/error-example/curl-request.adoc[]
-
+include::{snippets}/error-example/http-request.adoc[]
+include::{snippets}/error-example/http-response.adoc[]
+include::{snippets}/error-example/response-fields.adoc[]
 
 백엔드 개발자 가이드
 프론트 개발자 가이드123
