--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,22 @@
 = Bluesky Boot
+// 
+// == 소개
+// Bluesky Boot 는 Spring Boot를 확장하여 사용하기 위해 만든 프로젝트입니다.
+// 
+// Spring Boot는 쓰기 편하지만 몇가지 불편한 점이 있습니다.
+// 
+// 예를 들면 DataSource 생성과 관련된 설정이 DataSource 1개만 있다는 전제하에 AutoConfiguration을 제공하지만 실제 사용시엔 여러 DataSource를 사용합니다.
+// (Mongo나 다른 여러 AutoConfiguration도 비슷합니다.)
+// 
+// 이런 식으로 Spring Boot에서 제공해주는 AutoConfiguration을 좀더 확장해서 편하게 쓰기 위해 만든 프로젝트입니다
+// 
+// == 기능
+// 
+// 다음과 같은 기능을 제공합니다.
+// 
+// * 멀티 모듈 지원
+// * 다국어 메세지 복수 설정 처리
+// * (TODO) DataSource 복수 설정 제공
+// * (TODO) Mongo 복수 설정 제공
 
-spring boot를 공부하자
+  
