--- a/bluesky-boot-docs/src/main/asciidoc/_attributes.adoc
+++ b/bluesky-boot-docs/src/main/asciidoc/_attributes.adoc
@@ -12,7 +12,7 @@
 :docinfo: shared,private
 :hardbreaks:
 
-:basedir: {docdir}/../../..
+:basedir: {docdir}/../..
 :snippets: {basedir}/target/generated-snippets
 :sources-root: {basedir}/src
 :resources: {sources-root}/main/resources
