--- a/bluesky-boot-docs/src/main/asciidoc/test.adoc
+++ b/bluesky-boot-docs/src/main/asciidoc/test.adoc
@@ -50,6 +50,7 @@ imagesdir:: {imagesdir}
 project-version:: {project-version}
 sourcedir:: {sourcedir}
 endpoint-url:: {endpoint-url}
+snippets:: {snippets}
 
 == Includes
 
@@ -90,3 +91,5 @@ Use the configprop:server.port[] property to configure the server's port.
 The configprop:example.property[deprecated] property has been deprecated.
 
 Use the configprop:server.port[format=envvar] environment variable to configure the server's port.
+
+include::{snippets}/error-example/curl-request.adoc[]
