--- a/bluesky-boot-docs/src/main/asciidoc/test.adoc
+++ b/bluesky-boot-docs/src/main/asciidoc/test.adoc
@@ -93,3 +93,14 @@ The configprop:example.property[deprecated] property has been deprecated.
 Use the configprop:server.port[format=envvar] environment variable to configure the server's port.
 
 include::{snippets}/error-example/curl-request.adoc[]
+
+== diagram extensions
+
+[mermaid]
+.... 
+graph TD;
+    A-->B;
+    A-->C;
+    B-->D;
+    C-->D;
+....
