asciidoctor diagram mermaid 테스트

--- a/bluesky-boot-docs/src/main/asciidoc/test.adoc
+++ b/bluesky-boot-docs/src/main/asciidoc/test.adoc
@@ -96,11 +96,21 @@ include::{snippets}/error-example/curl-request.adoc[]
 
 == diagram extensions
 
-[mermaid]
-.... 
+[mermaid, mermaid-test, svg]
+----
 graph TD;
     A-->B;
     A-->C;
     B-->D;
     C-->D;
-....
+----
+
+[graphviz, dot-example, svg]
+----
+digraph g {
+    a -> b
+    b -> c
+    c -> d
+    d -> a
+}
+----
