ConfigurationProperties prefix bluesky-modules.* -> bluesky-boot.* 변경

--- a/bluesky-boot-docs/src/main/asciidoc/test.adoc
+++ b/bluesky-boot-docs/src/main/asciidoc/test.adoc
@@ -81,7 +81,7 @@ annotation, as the following example shows:
 
 [source,properties,configprops]
 ----
-bluesky-modules.core.modules.test.domain.web=http://localhost
+bluesky-boot.core.modules.test.domain.web=http://localhost
 ----
 
 
