--- a/bluesky-boot-build/bluesky-boot-docs/src/main/antora/modules/module-test/pages/_attributes.adoc
+++ b/bluesky-boot-build/bluesky-boot-docs/src/main/antora/modules/module-test/pages/_attributes.adoc
@@ -14,7 +14,7 @@
 
 :imagesdir: ./images
 
-:basedir: {docdir}/../../../../../../../..
+:basedir: ./../../../../../../../..
 :snippets: {basedir}/target/generated-snippets
 :sources-root: {basedir}/src
 :resources: {sources-root}/main/resources
