Add support for bluesky-boot-autoconfigure properties in documentation
- Update `bluesky-boot-properties.adoc` to include new section
- Modify `spring-configuration-metadata.js` to handle new module
- Update `bluesky-boot-properties.html` to include new section in TOC
- Adjust JavaScript to dynamically load properties for new module
- Remove unused title field from metadata context
- Update footer timestamp in HTML file

--- a/bluesky-boot-build/bluesky-boot-docs/src/main/asciidoc/bluesky-boot/bluesky-boot-properties.adoc
+++ b/bluesky-boot-build/bluesky-boot-docs/src/main/asciidoc/bluesky-boot/bluesky-boot-properties.adoc
@@ -1,18 +1,23 @@
 = Bluesky Boot Properties
 include::{docdir}/_attributes.adoc[]
 
-== bluesky-boot properties
-
+## bluesky-boot properties
 
 ++++
-<div id="springConfigurationMetadataContainer">
-    
-</div>
+<div id="bluesky-boot-container"></div>
+++++
+
+## bluesky-boot-autoconfigure properties
+
+++++
+<div id="bluesky-boot-autoconfigure-container"></div>
+++++
+
+++++
 <script src="js/handlebars.min.js"></script>
 <script src="js/spring-configuration-metadata.js"></script>
 
 <script id="spring-configuration-metadata-template" type="text/x-handlebars-template">
-	<h2>{{title}}</h2>
 	{{#if description}}
 		<p>{{description}}</p>
 	{{/if}}
