Add column group and class name helper to properties table and metadata script.
- Added `<colgroup>` to properties table for better column width
control.
- Added `properties` column header to the properties table.
- Updated properties table to display class name and code-wrapped name.
- Registered `className` helper in Handlebars for extracting class
names.
- Refactored JavaScript to use the new `className` helper.
- Improved error handling in metadata script.

--- a/bluesky-boot-build/bluesky-boot-docs/src/main/asciidoc/bluesky-boot/bluesky-boot-properties.adoc
+++ b/bluesky-boot-build/bluesky-boot-docs/src/main/asciidoc/bluesky-boot/bluesky-boot-properties.adoc
@@ -22,8 +22,15 @@ include::{docdir}/_attributes.adoc[]
 		<p>{{description}}</p>
 	{{/if}}
 	<table class="tableblock">
+<colgroup>
+			<col style="width: 20%"></col>
+			<col style="width: 40%"></col>
+			<col style="width: 30%"></col>
+			<col style="width: 10%"></col>
+		</colgroup>
 		<thead>
 			<tr>
+				<th class="halign-left">properties</th>
 				<th class="halign-left">name</th>
 				<th class="halign-left">description</th>
 				<th class="halign-left">defaultValue</th>
@@ -33,7 +40,8 @@ include::{docdir}/_attributes.adoc[]
 			{{#if properties.length}}
 				{{#each properties}}
 					<tr class="{{#if deprecated}}line-through{{/if}}">
-						<td>{{name}}</td>
+						<td>{{className sourceType}}</td>
+						<td><code>{{name}}</code></td>
 						<td>{{description}}</td>
 						<td>{{defaultValue}}</td>
 					</tr>
