Improve property description rendering and bean refresh handling
- Use triple braces for property descriptions in Handlebars template
- Add a list of bean names to refresh first in
BlueskyPropertiesRefresher
- Modify reloadPropertiesAll to use the new bean name list
- Remove keys parameter from reloadProperties methods
- Update comments to reflect changes in refresh handling
- Ensure proper initialization of beans during refresh

--- a/bluesky-boot-build/bluesky-boot-docs/src/main/asciidoc/bluesky-boot/bluesky-boot-properties.adoc
+++ b/bluesky-boot-build/bluesky-boot-docs/src/main/asciidoc/bluesky-boot/bluesky-boot-properties.adoc
@@ -53,7 +53,7 @@ include::{docdir}/_attributes.adoc[]
 					<tr class="{{#if deprecated}}line-through{{/if}}">
 						<td>{{className sourceType}}</td>
 						<td><code>{{name}}</code></td>
-						<td>{{description}}</td>
+						<td>{{{description}}}</td>
 						<td><code>{{defaultValue}}</code></td>
 					</tr>
 				{{/each}}
